--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "normalize.css": "^8.0.0",
     "pixi.js": "^4.8.1",
     "promise-file-reader": "^1.0.2",
-    "revolt-fx": "^1.0.0",
+    "revolt-fx": "^0.2.0",
     "save-as": "^0.1.8",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.2.0",
@@ -45,7 +45,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.9.0",
+    "sass": "*",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
